--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -42,8 +42,11 @@
     font-size: xx-large ;
 }
 
-.nav-text a>svg {
-    padding-bottom: 0px;
+.nav-text a {
+    display: flex;
+    justify-content: center;
+    align-items: self-end;
+
 }
 
 .nav-menu-items {
@@ -69,25 +72,22 @@ span {
 }
 
 span.title {
-    font-size: 33px;
+    font-size: 25px;
     text-align: center;
     justify-content: center;
     
     
 }
- 
-.active a {
-text-decoration: none;
-}
-
 .nav-menu a {
     text-decoration: none;
+    align-self: baseline;
+    padding: 20px;
 }
 
 li.nav-text a > svg {
-    text-align: center;
-   padding-top: 10px;
-    height: 60px;
-    width: 60px;
-
+    height: 50px;
+    width: 40px;
+}
+.list-items{
+    padding: 5px;
 }
