--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -97,8 +97,10 @@ li.nav-text {
 }
 
 .menu-close svg{
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
+    padding-left: 15px;
+    padding-bottom: 33px;
 }
 
 .foot-items {
@@ -109,10 +111,6 @@ li.nav-text {
     justify-content: center;
 }
 
- /* .twitter {
-    height: 20px;
-    width: 20px;
-}  */
 
 .navimg {
     height: 100px;
