--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 .navbar {
-    background-color: #072049;
+    background-image: linear-gradient(-180deg, #005972, #03455f);
     height: 70px;
     display: flex;
     align-items: center;
@@ -16,7 +16,7 @@
 
 .nav-menu {
     text-decoration: none;
-    background-color: #072049;
+    background-image: linear-gradient(-180deg, #005972, #03455f);
     width: 220px;
     height: 100vh;
     display: flex;
@@ -54,7 +54,7 @@
 }
 
 .navbar-toggle {
-    background-color: #072049;
+    
     width: 100%;
     height: 80px;
     display: flex;
@@ -95,16 +95,22 @@ span {
     height: 10%;
 }
 
-.side-text {
+.side-text { 
     color: rgb(255, 255, 255);
-    font-family: 'Secular One', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    
 
 }
 
 .side-text:hover { 
-    color: black;
-    background-color: rgb(16, 184, 184);
+    color: rgb(0, 238, 238);
     border-radius: 2px;
+    text-shadow:
+    0 0 42px #0fa,
+    0 0 82px #0fa,
+    0 0 92px #0fa,
+    0 0 102px #0fa,
+    0 0 151px #0fa;
 }
 
 span.title {
@@ -153,7 +159,7 @@ li.nav-text {
 
 .foot-items svg {
     border-radius: 15px;
-    border-style: groove;
+    border-style: double;
     border-width: 2px;
 
     padding: 5px 5px;
@@ -177,11 +183,10 @@ li.nav-text {
 .openicon {
     height: 40px;
     width: 40px;
+    cursor: pointer;
+    box-shadow: none;
 }
 
-.svg.openicon:hover {
-    cursor: pointer;
-}
 
 .closeicon {
     height: 80px;
