--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,12 @@
   font-family: 'Fredoka', sans-serif;
 }
 
-.home, .team {
+/* .home, .team { 
   display: flex;
   height: 90vh;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
 }
+
+*/
