--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -112,6 +112,16 @@ span {
     0 0 102px #0fa,
     0 0 151px #0fa;
 }
+.side-text-active { 
+    color: rgb(0, 238, 238);
+    border-radius: 2px;
+    text-shadow:
+    0 0 42px #0fa,
+    0 0 82px #0fa,
+    0 0 92px #0fa,
+    0 0 102px #0fa,
+    0 0 151px #0fa;
+}
 
 span.title {
     font-size: 25px;
