--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -54,9 +54,9 @@
 }
 
 .navbar-toggle {
-    
+    background-image: linear-gradient(-180deg, #005972, #03455f);
     width: 100%;
-    height: 80px;
+    height: 70px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -82,7 +82,7 @@ color: white;
 }
 
 .mybutton { 
-    position: fixed;
+    position: absolute;
     top: 16px;
     right: 10px;
     
@@ -95,8 +95,7 @@ span {
     height: 10%;
 }
 
-.side-text { 
-    color: rgb(255, 255, 255);
+.side-text {
     font-family: 'Poppins', sans-serif;
     
 
@@ -188,6 +187,10 @@ li.nav-text {
     object-fit: cover;
     padding-top: 20px;
     padding-right: 190px;
+    z-index: 1;
+    transition-property: width;
+    transition-duration: 1s;
+
 }
 
 .openicon {
