--- a/src/pages/Team.css
+++ b/src/pages/Team.css
@@ -6,17 +6,28 @@
    box-sizing: border-box;
  }
  
+ @media only screen and (max-width: 900px){
+  .main {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .profile-card{
+    flex: 50%;
+  }
+ }
+
+
  .main{
    width: 100%;
-   height: 100vh;
+   height: 80vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
  }
  .profile-card{
-   width: 220px;
-   height: 220px;
+   width: 160px;
+   height: 160px;
    background: #fff;
    padding: 30px;
    border-radius: 50%;
@@ -26,7 +37,7 @@
  }
  .profile-card:hover{
    border-radius: 10px;
-   height: 260px;
+   height: 210px;
  }
  .profile-card .img{
    width: 100%;
