--- a/src/pages/Team.css
+++ b/src/pages/Team.css
@@ -44,7 +44,7 @@
    width: 100%;
    height: 100%;
    transition: .6s;
-   z-index: 99;
+   /* z-index: 99; */
  }
  .profile-card:hover .img{
    transform: translateY(-60px);
@@ -59,6 +59,10 @@
    border-radius: 10px;
  }
  .caption{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
    text-align: center;
    transform: translateY(-80px);
    opacity: 0;
