--- a/src/pages/Vision.css
+++ b/src/pages/Vision.css
@@ -1,7 +1,6 @@
 .roadmap {
-   object-fit: cover;
+   object-fit: fill;
    width: 100%;
-   height: 50%;
-   overflow: hidden;
+ height: 100%;
 
 }
