--- a/src/pages/Modals/Nftmodal.css
+++ b/src/pages/Modals/Nftmodal.css
@@ -2,7 +2,7 @@
     top: 0px;
     right: 0px;
   }
-  .modalBackground {
+  .modalBackground1 {
       width: 100vw;
       height: 100vh;
       /* background-color: rgba(200, 200, 200); */
@@ -14,9 +14,10 @@
       
     }
     
-    .modalContainer {
+    .modalContainer1 {
       width: 500px;
-      height: 500px;
+      height: 85%;
+      margin-top: 50px;
       border-radius: 12px;
       background-color: white;
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -25,25 +26,25 @@
       padding: 25px;
     }
     
-    .modalContainer .title {
-      display: inline-block;
+    .modalContainer1 .title1 {
+      display: block;
       text-align: center;
       margin-top: 10px;
     }
     
-    .titleCloseBtn {
+    .titleCloseBtn1 {
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
     }
     
-    .titleCloseBtn button {
+    .titleCloseBtn1 button {
       background-color: transparent;
       border: none;
       font-size: 25px;
       cursor: pointer;
     }
     
-    .modalContainer .body {
+    .modalContainer1 .body1 {
       flex: 50%;
       display: flex;
       justify-content: center;
@@ -51,26 +52,36 @@
       font-size: 1.7rem;
       text-align: center;
     }
+    .body1>img{
+      width: 80%;
+      height: 90%;
+      object-fit: contain;
+    }
+    .traits1{
+      text-align: center;
+      width: 100%;
+      height: 100px;
+    }
     
-    .modalContainer .footer {
+    .modalContainer1 .footer1 {
       flex: 20%;
       display: flex;
       justify-content: center;
       align-items: center;
     }
     
-    .modalContainer .footer button {
+    .modalContainer1 .footer1 button {
       width: 150px;
       height: 45px;
       margin: 10px;
       border: none;
-      background-color: cornflowerblue;
+      background-color: rgb(79, 214, 216);
       color: white;
       border-radius: 8px;
       font-size: 20px;
       cursor: pointer;
     }
     
-    #cancelBtn {
+    #cancelBtn1 {
       background-color: crimson;
     }
