--- a/src/pages/Modals/Confirmation.css
+++ b/src/pages/Modals/Confirmation.css
@@ -67,7 +67,7 @@
     height: 45px;
     margin: 10px;
     border: none;
-    background-color: #032854;
+    background-color: #007bff;
     color: white;
     border-radius: 8px;
     font-size: 20px;
